# rocket-template

./: .compose.template  .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-postgres.yml  docker-rocket.yml  rust-toolchain.toml
.github/workflows/: ci.yml
src/: configs.rs  connection.rs  logger.rs  main.rs
src/handlers/: healthcheck.rs  mod.rs  template_other.rs
src/models/: template.rs
src/utils/: from_request.rs  mod.rs  responders.rs
